--- a/sabrine/app/templates/base.html
+++ b/sabrine/app/templates/base.html
@@ -58,8 +58,8 @@ https://templatemo.com/tm-564-plot-listing
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="{{ url_for('index')}}" class="active">Home</a></li>
-              <li><a href="category.html">Category</a></li>
-              <li><a href="listing.html">Listing</a></li>
+              <!--li><a href="category.html">Category</a></li>
+              <li><a href="listing.html">Listing</a></li-->
               <li><a href="contact.html">Contact Us</a></li> 
               <li><div class="main-white-button"><a href="#"><i class="fa fa-plus"></i> Add Your Listing</a></div></li> 
             </ul>        
