app flask prediction ok

--- a/sabrine/app/templates/index.html
+++ b/sabrine/app/templates/index.html
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col-lg-3 align-self-center">
                     <fieldset>
-                        <select name="area" class="form-select" aria-label="Area" id="chooseAreaCategory" onchange="this.form.click()">
+                        <select name="area" class="form-select" aria-label="Area" id="chooseAreaCategory" required onchange="this.form.click()">
                             <option selected>Paris (75)</option>
                             <option value="75001">Paris 1</option>
                             <option value="75002">Paris 2</option>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="col-lg-3 align-self-center">
                     <fieldset>
-                        <select name="rooms" class="form-select" aria-label="Default select example" id="chooseRoomsCategory" onchange="this.form.click()">
+                        <select name="rooms" class="form-select" aria-label="Default select example" id="chooseRoomsCategory" required onchange="this.form.click()">
                             <option selected>Rooms</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-lg-3 align-self-center">
                     <fieldset>
-                        <select name="bedrooms" class="form-select" aria-label="Default select example" id="chooseBedroomsCategory" onchange="this.form.click()">
+                        <select name="bedrooms" class="form-select" aria-label="Default select example" id="chooseBedroomsCategory" required onchange="this.form.click()">
                             <option selected>Bedrooms</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-lg-3 align-self-center">
                     <fieldset>
-                        <select name="energy" class="form-select" aria-label="Default select example" id="chooseEnergyCategory" onchange="this.form.click()">
+                        <select name="energy" class="form-select" aria-label="Default select example" id="chooseEnergyCategory" required onchange="this.form.click()">
                             <option selected>Energy</option>
                             <option value="1">A</option>
                             <option value="2">B</option>
@@ -77,13 +77,13 @@
                 </div>
                 <div class="col-lg-3">
                     <fieldset>
-                        <input name="parking" type="checkbox" id="parking" value="1">
+                        <input name="parking" type="checkbox" id="parking" value=1>
                         <label for="parking">Parking</label>
                     </fieldset>
                 </div>
                 <div class="col-lg-3">
                     <fieldset>
-                        <input name="box" type="checkbox" id="box" value="1">
+                        <input name="box" type="checkbox" id="box" value=1>
                         <label for="box">Box</label>
                     </fieldset>
                 </div>
