--- a/sabrine/app/templates/base.html
+++ b/sabrine/app/templates/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,8 +5,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Projet Ingé 2D - Prédiction des prix de l'immobilier à Paris">
+    <meta name="author" content="KRETZ-SALLET-THIBERT">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
@@ -58,10 +57,8 @@ https://templatemo.com/tm-564-plot-listing
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="{{ url_for('index')}}" class="active">Home</a></li>
-              <!--li><a href="category.html">Category</a></li>
-              <li><a href="listing.html">Listing</a></li-->
-              <li><a href="contact.html">Contact Us</a></li> 
-              <li><div class="main-white-button"><a href="#"><i class="fa fa-plus"></i> Add Your Listing</a></div></li> 
+              <li><a href="{{ url_for('about')}}">About Us</a></li>
+              <li><div class="main-white-button"><a href="#"><i class="fa fa-plus"></i> Add Your Listing</a></div></li>
             </ul>        
             <a class='menu-trigger'>
                 <span>Menu</span>
@@ -77,16 +74,7 @@ https://templatemo.com/tm-564-plot-listing
   <div class="main-banner">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
-          <div class="top-text header-text">
-            <img src="../static/css/templatemo_564_plot_listing/assets/images/black-logo.png" alt="Black logo" style="width:300px; height:300px; align:middle">
-            <h6>Over 36,500+ users already</h6>
-            <h2>Find out how much your property is worth!</h2>
-          </div>
-        </div>
-        <div class="col-lg-12">
-            {% block form %} {% endblock %}
-        </div>
+        {% block content %} {% endblock %}
         <!--div class="col-lg-10 offset-lg-1">
           <ul class="categories">
             <li><a href="category.html"><span class="icon"><img src="../static/css/templatemo_564_plot_listing/assets/images/search-icon-01.png" alt="Home"></span> Apartments</a></li>
