--- a/sabrine/app/templates/index.html
+++ b/sabrine/app/templates/index.html
@@ -1,99 +1,106 @@
 {% extends 'base.html' %}
 
+{% block title %} Welcome to Predict {% endblock %}
 {% block content %}
-    <h1>{% block title %} Welcome to Predict {% endblock %}</h1>
-    {% block form %}
+    <div class="col-lg-12">
+      <div class="top-text header-text">
+        <img src="../static/css/templatemo_564_plot_listing/assets/images/black-logo.png" alt="Black logo" style="width:300px; height:300px; align:middle">
+        <h6>Over 36,500+ users already</h6>
+        <h2>Find out how much your property is worth!</h2>
+      </div>
+    </div>
+    <div class="col-lg-12">
         <form id="search-form" name="gs" method="POST" role="search" action="{{ url_for('index')}}">
-            <div class="row">
-                <div class="col-lg-3 align-self-center">
-                    <fieldset>
-                        <select name="area" class="form-select" aria-label="Area" id="chooseAreaCategory" required onchange="this.form.click()">
-                            <option selected>Paris (75)</option>
-                            <option value="75001">Paris 1</option>
-                            <option value="75002">Paris 2</option>
-                            <option value="75003">Paris 3</option>
-                            <option value="75004">Paris 4</option>
-                            <option value="75005">Paris 5</option>
-                            <option value="75006">Paris 6</option>
-                            <option value="75007">Paris 7</option>
-                            <option value="75008">Paris 8</option>
-                            <option value="75009">Paris 9</option>
-                            <option value="75010">Paris 10</option>
-                            <option value="75011">Paris 11</option>
-                            <option value="75012">Paris 12</option>
-                            <option value="75013">Paris 13</option>
-                            <option value="75014">Paris 14</option>
-                            <option value="75015">Paris 15</option>
-                            <option value="75016">Paris 16</option>
-                            <option value="75017">Paris 17</option>
-                            <option value="75018">Paris 18</option>
-                            <option value="75019">Paris 19</option>
-                            <option value="75020">Paris 20</option>
-                        </select>
-                    </fieldset>
-                </div>
-                <div class="col-lg-3 align-self-center">
-                    <fieldset>
-                        <input type="number" name="surface" class="searchText" placeholder="Enter your surface area" autocomplete="on" required>
-                    </fieldset>
-                </div>
-                <div class="col-lg-3 align-self-center">
-                    <fieldset>
-                        <select name="rooms" class="form-select" aria-label="Default select example" id="chooseRoomsCategory" required onchange="this.form.click()">
-                            <option selected>Rooms</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4+">4+</option>
-                            <!-- mettre si selectionne 4+, un input dans lequel il rentre combien exactement-->
-                        </select>
-                    </fieldset>
-                </div>
-                <div class="col-lg-3 align-self-center">
-                    <fieldset>
-                        <select name="bedrooms" class="form-select" aria-label="Default select example" id="chooseBedroomsCategory" required onchange="this.form.click()">
-                            <option selected>Bedrooms</option>
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4+">4+</option>
-                            <!-- mettre si selectionne 4+, un input dans lequel il rentre combien exactement-->
-                        </select>
-                    </fieldset>
-                </div>
-                <div class="col-lg-3 align-self-center">
-                    <fieldset>
-                        <select name="energy" class="form-select" aria-label="Default select example" id="chooseEnergyCategory" required onchange="this.form.click()">
-                            <option selected>Energy</option>
-                            <option value="1">A</option>
-                            <option value="2">B</option>
-                            <option value="3">C</option>
-                            <option value="4">D</option>
-                            <option value="5">E</option>
-                            <option value="6">F</option>
-                            <option value="7">G</option>
-                        </select>
-                    </fieldset>
-                </div>
-                <div class="col-lg-3">
-                    <fieldset>
-                        <input name="parking" type="checkbox" id="parking" value=1>
-                        <label for="parking">Parking</label>
-                    </fieldset>
-                </div>
-                <div class="col-lg-3">
-                    <fieldset>
-                        <input name="box" type="checkbox" id="box" value=1>
-                        <label for="box">Box</label>
-                    </fieldset>
-                </div>
-                <div class="col-lg-3">
-                    <fieldset>
-                        <button type="submit" class="main-button"><i class="fa fa-search"></i> Predict Now</button>
-                    </fieldset>
-                </div>
+        <div class="row">
+            <div class="col-lg-3 align-self-center">
+                <fieldset>
+                    <select name="area" class="form-select" aria-label="Area" id="chooseAreaCategory" required onchange="this.form.click()">
+                        <option selected>Paris (75)</option>
+                        <option value="75001">Paris 1</option>
+                        <option value="75002">Paris 2</option>
+                        <option value="75003">Paris 3</option>
+                        <option value="75004">Paris 4</option>
+                        <option value="75005">Paris 5</option>
+                        <option value="75006">Paris 6</option>
+                        <option value="75007">Paris 7</option>
+                        <option value="75008">Paris 8</option>
+                        <option value="75009">Paris 9</option>
+                        <option value="75010">Paris 10</option>
+                        <option value="75011">Paris 11</option>
+                        <option value="75012">Paris 12</option>
+                        <option value="75013">Paris 13</option>
+                        <option value="75014">Paris 14</option>
+                        <option value="75015">Paris 15</option>
+                        <option value="75016">Paris 16</option>
+                        <option value="75017">Paris 17</option>
+                        <option value="75018">Paris 18</option>
+                        <option value="75019">Paris 19</option>
+                        <option value="75020">Paris 20</option>
+                    </select>
+                </fieldset>
             </div>
-        </form>
-    {% endblock %}
+            <div class="col-lg-3 align-self-center">
+                <fieldset>
+                    <input type="number" name="surface" class="searchText" placeholder="Enter your surface area" autocomplete="on" required>
+                </fieldset>
+            </div>
+            <div class="col-lg-3 align-self-center">
+                <fieldset>
+                    <select name="rooms" class="form-select" aria-label="Default select example" id="chooseRoomsCategory" required onchange="this.form.click()">
+                        <option selected>Rooms</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4+">4+</option>
+                        <!-- mettre si selectionne 4+, un input dans lequel il rentre combien exactement-->
+                    </select>
+                </fieldset>
+            </div>
+            <div class="col-lg-3 align-self-center">
+                <fieldset>
+                    <select name="bedrooms" class="form-select" aria-label="Default select example" id="chooseBedroomsCategory" required onchange="this.form.click()">
+                        <option selected>Bedrooms</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4+">4+</option>
+                        <!-- mettre si selectionne 4+, un input dans lequel il rentre combien exactement-->
+                    </select>
+                </fieldset>
+            </div>
+            <div class="col-lg-3 align-self-center">
+                <fieldset>
+                    <select name="energy" class="form-select" aria-label="Default select example" id="chooseEnergyCategory" required onchange="this.form.click()">
+                        <option selected>Energy</option>
+                        <option value="1">A</option>
+                        <option value="2">B</option>
+                        <option value="3">C</option>
+                        <option value="4">D</option>
+                        <option value="5">E</option>
+                        <option value="6">F</option>
+                        <option value="7">G</option>
+                    </select>
+                </fieldset>
+            </div>
+            <div class="col-lg-3">
+                <fieldset>
+                    <input name="parking" type="checkbox" id="parking" value=1>
+                    <label for="parking">Parking</label>
+                </fieldset>
+            </div>
+            <div class="col-lg-3">
+                <fieldset>
+                    <input name="box" type="checkbox" id="box" value=1>
+                    <label for="box">Box</label>
+                </fieldset>
+            </div>
+            <div class="col-lg-3">
+                <fieldset>
+                    <button type="submit" class="main-button"><i class="fa fa-search"></i> Predict Now</button>
+                </fieldset>
+            </div>
+        </div>
+    </form>
+    </div>
 {% endblock %}
 
