--- a/projet/app/templates/base.html
+++ b/projet/app/templates/base.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="../static/css/animate.css">
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
 
 <body>
