--- a/projet/app/templates/base.html
+++ b/projet/app/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Projet Ingé 2D - Prédiction des prix de l'immobilier à Paris">
     <meta name="author" content="KRETZ-SALLET-THIBERT">
+    <link rel="icon" href="../static/css/images/logo-bleu.png">
     <title>{% block title %} {% endblock %}</title>
 
     <!-- Google Fonts -->
@@ -31,7 +32,6 @@
 
 
     <div class="container">
-        <div class="background-image-paris"/>
         {% block content %} {% endblock %}
     </div>
 </body>
